# fab-ops-yield-control-tower

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  SERVICE_GRADE_SPECKIT.ko.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  pages-auto-deploy.yml
app/: __init__.py  domain.py  helpers.py  main.py  operator_access.py  runtime_store.py
app/domains/: __init__.py
app/domains/fab_ops/: __init__.py  domain.py  helpers.py  routes.py
app/domains/scanner/: __init__.py  domain.py  helpers.py  routes.py
app/shared/: __init__.py  aws_adapter.py  database.py  monitoring.py  operator_access.py  resource_pack.py  runtime_store.py  signatures.py
app/static/: app.js  index.html  style.css
architecture/: blueprint.json
docs/: cloud-ai-architecture.md  technical-review-pack.md
docs/architecture/: blueprint.json
docs/deployment/: CLOUDFLARE_PAGES.md
infra/k8s/: configmap.yaml  deployment.yaml  hpa.yaml  service.yaml
infra/terraform/: README.md  main.tf  variables.tf
scripts/: exercise_runtime.py  validate_repository_surface.py
site/: index.html
tests/: test_api.py  test_api_edge_cases.py  test_aws_exports.py  test_fab_ops_domain_logic.py  test_scanner_domain_logic.py  test_service_ui_contract.py  test_shared_modules.py  test_site_contract.py
