[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "semiconductor-ops-platform"
version = "0.2.0"
description = "Unified semiconductor ops platform: fab control tower (alarms, lots, tools, recovery board) and scanner field response (field incidents, subsystem escalation, qualification review)."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Kim" }]
license = { text = "MIT" }
dependencies = [
  "fastapi==0.115.8",
  "uvicorn==0.34.0"
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.5",
  "httpx==0.28.1"
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
